Fixes z-index order of maximized editor vs. forum menu Fixes #6820

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -4085,6 +4085,6 @@ tr[id^='list_news_lists_'] textarea {
 	word-break: break-all;
 }
 
-div.sceditor-container {
+div.sceditor-container:not(.sceditor-maximize) {
 	z-index: 4;
 }
